# app_pagos

./: .gitignore  alembic.ini  app.py  init_db.py  init_paquetes.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 8c05f196d162_initial_structure_creation.py  f8698239e8ae_estructura_inicial_limpia_neon.py
static/css/: style.css
templates/: base.html  cambiar_password.html  cliente_detalle.html  cliente_form.html  clientes_demo_list.html  clientes_list.html  clientes_por_vencer_list.html  conciliacion_importar.html  conciliacion_list.html  dashboard.html  importar_clientes.html  index.html  login.html  pagos_list.html  paquetes_precios_list.html  usuarios.html  usuarios_list.html
