[tool.poetry]
name = "app_pagos"
version = "0.1.0"
description = "App de pagos y conciliación"
authors = ["Tu Nombre <tu@email.com>"]
license = "MIT"

[tool.poetry.dependencies]
# Forzamos Python 3.11 para compatibilidad con pandas
python = ">=3.11,<3.12" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"